<resources>
    <string name="app_name">recyclapp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="Hola">Hola</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_new_post">NewPost</string>
    <string name="title">TITLE</string>
    <string name="type_here">Type here</string>
    <string name="textview">TextView</string>
    <string name="body">Body</string>
    <string name="tags">Tags</string>
    <string name="image">Image</string>
    <string name="upload_image">Upload image</string>
    <string name="title_activity_search">Search</string>
    <string name="uploadImage">Upload Image</string>
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="publish">PUBLISH</string>
    <string name="did_you_like_the_post">Did you like the post?</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="search">Search</string>
    <string name="title_activity_tags">Tags</string>
    <string name="can">Can</string>
    <string name="paper">Paper</string>
    <string name="glass">Glass</string>
    <string name="plastic">Plastic</string>
    <string name="bulb">Bulb</string>
    <string name="jar">Jar</string>
    <string name="name">Name</string>
    <string name="bottle">BOTTLE</string>
    <string name="carton">CARTON</string>
    <string name="coffe_capsules">CAPSULES</string>
    <string name="bulbs">BULBS</string>

</resources>
