<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkGrey"
    tools:context=".ui.NewPost">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDarkGrey"

        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorLightGreen"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:text="@string/title"
                    android:textColor="@color/colorAlmostWhite"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="244dp"
                        android:layout_height="56dp"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        android:hint="@string/type_here"
                        android:textColor="@color/colorAlmostWhite" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:text="@string/body"
                android:textAlignment="center"
                android:textColor="@color/colorAlmostWhite"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="192dp"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:hint="@string/type_here"
                    android:lines="5"
                    android:textAlignment="viewStart"
                    android:textColorHint="@color/colorBlack" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="154dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:text="@string/image"
                    android:textAlignment="center"
                    android:textColor="@color/colorAlmostWhite"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="238dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:text="@string/tags"
                    android:textAlignment="center"
                    android:textColor="@color/colorAlmostWhite"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagenId"
                    android:layout_width="46dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_weight="1"
                    android:contentDescription="@string/todo"
                    app:srcCompat="@android:drawable/ic_menu_upload" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="127dp"
                    android:layout_height="127dp"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_weight="1">


                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbarAlwaysDrawVerticalTrack="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/button"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/can" />

                            <Button
                                android:id="@+id/button6"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/jar" />

                            <Button
                                android:id="@+id/button2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/bottle" />

                            <Button
                                android:id="@+id/button3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/bulbs" />

                            <Button
                                android:id="@+id/button4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/coffe_capsules" />

                            <Button
                                android:id="@+id/button5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/carton" />
                        </LinearLayout>
                    </ScrollView>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button11"
                android:layout_width="147dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:background="@color/colorAlmostWhite"
                android:onClick="onclicK"
                android:text="@string/uploadImage"
                android:textColor="@color/colorBlack" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="29dp" />

            <Button
                android:id="@+id/publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@color/colorDarkGreen"
                android:text="@string/publish"
                android:textColor="@color/colorBlack"
                android:textSize="24sp" />

        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>